--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <!-- Menu DESKTOP CENTER -->
     <div class="hidden md:flex mx-auto space-x-6 items-center">
-      <a href="index.html" class="nav-link">Accueil</a>
+      <a href="accueil.html" class="nav-link">Accueil</a>
       <a href="expertise.html" class="nav-link">Expertise</a>
       <a href="projets.html" class="nav-link">Projets</a>
       <a href="A_propos.html" class="nav-link">À propos</a>
@@ -350,4 +350,5 @@
 
 </body>
 </html>
+
 
