--- a/expertise.html
+++ b/expertise.html
@@ -72,13 +72,13 @@
   <div class="relative w-full flex items-center p-4">
 
     <!-- Logo LEFT -->
-    <a href="accueil.html" class="absolute left-4 md:left-8">
+    <a href="index.html" class="absolute left-4 md:left-8">
       <img src="img/LOGO-SITE.svg" alt="Logo Mon Site" class="h-10 md:h-12 w-auto">
     </a>
 
     <!-- Menu DESKTOP CENTER -->
     <div class="hidden md:flex mx-auto space-x-6 items-center">
-      <a href="accueil.html" class="nav-link">Accueil</a>
+      <a href="index.html" class="nav-link">Accueil</a>
       <a href="expertise.html" class="nav-link">Expertise</a>
       <a href="projets.html" class="nav-link">Projets</a>
       <a href="A_propos.html" class="nav-link">À propos</a>
@@ -96,7 +96,7 @@
     <div id="mobileMenu"
       class="hidden absolute top-full left-0 w-full bg-white shadow-md flex flex-col items-center py-6 space-y-4 md:hidden">
 
-      <a href="accueil.html" class="nav-link">Accueil</a>
+      <a href="index.html" class="nav-link">Accueil</a>
       <a href="expertise.html" class="nav-link">Expertise</a>
       <a href="projets.html" class="nav-link">Projets</a>
       <a href="A_propos.html" class="nav-link">À propos</a>
@@ -582,3 +582,4 @@ Il dépend du type de sujet, de son ampleur et des besoins spécifiques qu’il 
 
 </body>
 </html>
+
