--- a/contact.html
+++ b/contact.html
@@ -211,6 +211,8 @@
 
   <input type="email" name="email" placeholder="E-mail" class="w-full border-2 border-[#FF6D32] rounded-lg px-4 py-4 bg-transparent focus:outline-none">
 
+  <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+
   <input type="tel" name="telephone" placeholder="Téléphone" class="w-full border-2 border-[#FF6D32] rounded-lg px-4 py-4 bg-transparent focus:outline-none">
 
   <textarea name="message" rows="5" placeholder="Message" class="w-full border-2 border-[#FF6D32] rounded-lg px-4 py-4 bg-transparent focus:outline-none"></textarea>
@@ -417,6 +419,7 @@ Il dépend du type de sujet, de son ampleur et des besoins spécifiques qu’il 
 </body>
 
 </html>
+
 
 
 
