Modification index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <img src="img/LOGO-SITE.svg" alt="Logo Mon Site" class="h-10 md:h-12 w-auto">
     </a>
 
-    <!-- Menu DESKTOP CENTER -->
+    <!-- Menu DESKTOP center -->
     <div class="hidden md:flex mx-auto space-x-6 items-center">
       <a href="index.html" class="nav-link">Accueil</a>
       <a href="expertise.html" class="nav-link">Expertise</a>
