--- a/A_propos.html
+++ b/A_propos.html
@@ -132,7 +132,7 @@ bg-white">
 </div>
 
   <!-- IMAGE -->
-  <div class="flex justify-center lg:justify-end" data-aos="fade-left">
+  <div class="flex justify-center lg:justify-end">
     <img src="img/Photo_SL5.png" alt="Studio créatif"
       class="w-[75%] sm:w-[55%] md:w-[45%]
              lg:w-[100%] xl:w-[110%]
