--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <img src="img/LOGO-SITE.svg" alt="Logo Mon Site" class="h-10 md:h-12 w-auto">
     </a>
 
-    <!-- Menu DESKTOP center -->
+    <!-- Menu DESKTOP CENTER -->
     <div class="hidden md:flex mx-auto space-x-6 items-center">
       <a href="index.html" class="nav-link">Accueil</a>
       <a href="expertise.html" class="nav-link">Expertise</a>
@@ -111,41 +111,52 @@
 <main class="flex-grow">
 
   <!-- Hero -->
-  <section id="hero" class="relative bg-white text-black h-screen flex flex-col justify-center items-center text-center p-8">
+  <section id="hero"
+         class="relative bg-white text-black min-h-screen flex flex-col items-center text-center px-6 md:px-8 py-6
+                justify-center md:justify-center lg:justify-center">
 
-  <!-- Dégradé subtil derrière le texte -->
+  <!-- Dégradé -->
   <div class="absolute inset-0 bg-gradient-to-b from-white via-gray-100 to-white pointer-events-none"></div>
 
-  <h1 class="text-5xl md:text-6xl font-bold mb-9" data-aos="fade-up">
-    <span class="font-helveticabold">Je révèle les </span>
-    <span class="font-danielbk">voix</span>,<br>
-    <span class="font-helveticabold">raconte les </span>
-    <span class="font-danielbk">histoires</span>.
-  </h1>
-    <p class="text-xl md:text-1xl mb-20 leading-[1.6] md:leading-[1.6]" data-aos="fade-up" data-aos-delay="200"><span class="text-[#FF6D32]">Studio de création</span> spécialisé en Réalisation, Direction Artistique et Motion Design,<br> 
-  j’accompagne les marques, institutions et projets culturels dans<br> la création de contenus visuels et narratifs à forte identité.</p>
+  <!-- Contenu principal -->
+  <div class="z-10 flex flex-col items-center">
+    <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold mb-9" data-aos="fade-up">
+      <span class="font-helveticabold">Je révèle les </span>
+      <span class="font-danielbk">voix</span>,<br>
+      <span class="font-helveticabold">raconte les </span>
+      <span class="font-danielbk">histoires</span>.
+    </h1>
 
-    <a href="projets.html" class="relative z-10 border-2 border-[#FF6D32] text-[#FF6D32] text-[17px] px-12 py-2.5 rounded-full font-helvetica hover:bg-[#FF6D32] hover:text-white transition" data-aos="fade-up" data-aos-delay="400">Mes réalisations</a>
+    <p class="text-base sm:text-lg md:text-xl mb-12 md:mb-20 leading-relaxed max-w-2xl" data-aos="fade-up" data-aos-delay="200">
+      <span class="text-[#FF6D32]">Studio de création</span> spécialisé en Réalisation, Direction Artistique et Motion Design,
+      j’accompagne les marques, institutions et projets culturels dans la création de contenus visuels et narratifs à forte identité.
+    </p>
 
+    <a href="projets.html" class="relative z-10 border-2 border-[#FF6D32] text-[#FF6D32] text-sm md:text-[17px] px-10 md:px-12 py-2.5 rounded-full font-helvetica hover:bg-[#FF6D32] hover:text-white transition" data-aos="fade-up" data-aos-delay="400">
+      Mes réalisations
+    </a>
+  </div>
 
-<!-- Scroll indicator -->
-<a href="#section1"
-   class="absolute bottom-8 flex flex-col items-center text-gray-500 hover:text-[#FF6D32] transition"
-   aria-label="Scroller vers la suite">
+  <!-- Scroll indicator -->
+  <a href="#section1"
+     class="absolute bottom-4 sm:bottom-6 md:bottom-8 lg:bottom-12 flex flex-col items-center text-gray-500 hover:text-[#FF6D32] transition z-10 animate-bounce-slow"
+     aria-label="Scroller vers la suite">
 
-  <span class="text-sm mb-2 font-helvetica">Scroll</span>
+    <span class="text-xs sm:text-sm mb-1 sm:mb-2 font-helvetica tracking-wide">
+      Scroll
+    </span>
 
-  <svg xmlns="http://www.w3.org/2000/svg"
-       class="w-5 h-5"
-       fill="none"
-       viewBox="0 0 24 24"
-       stroke="currentColor"
-       stroke-width="1.5">
-    <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-  </svg>
-</a>
+    <svg xmlns="http://www.w3.org/2000/svg"
+         class="w-4 h-4 sm:w-5 sm:h-5"
+         fill="none"
+         viewBox="0 0 24 24"
+         stroke="currentColor"
+         stroke-width="1.5">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+    </svg>
+  </a>
 
-  </section>
+</section>
 
  <!-- Section 1 - Présentation finale -->
 <section id="section1" class="grid grid-cols-1 lg:grid-cols-2 gap-10 items-center px-6 sm:px-12 lg:px-32 xl:px-48 pt-[100px] lg:pt-[120px] pb-12 bg-white">
@@ -169,11 +180,11 @@
   </div>
 
   <!-- Image avec dégradé derrière -->
-  <div class="relative flex justify-center items-center w-full h-full" data-aos="fade-left">
+  <div class="relative z-10">
 
      <!-- Image -->
     <img src="img/Photo_SL5.png" alt="Studio créatif"
-      class="w-[80%] sm:w-[60%] md:w-[50%] lg:w-full h-auto max-h-[70vh] lg:max-h-[90vh] object-contain rounded-lg transform transition-transform duration-500 hover:-translate-y-4 hover:translate-x-2">
+      class="relative flex justify-center items-center w-full h-full w-[80%] sm:w-[60%] md:w-[50%] lg:w-full h-auto max-h-[70vh] lg:max-h-[90vh] object-contain rounded-lg transform transition-transform duration-500 hover:-translate-y-4 hover:translate-x-2">
   </div>
 
 </section>
@@ -285,7 +296,7 @@
 </section>
 
 <!-- Section Contact -->
-  <section id="homecontact" class="relative bg-white text-black h-screen flex flex-col justify-center items-center text-center p-8">
+  <section id="homecontact" class="relative bg-white text-black min-h-screen flex flex-col justify-center items-center text-center p-8">
 
   <!-- Dégradé subtil derrière le texte -->
   <div class="absolute inset-0 bg-gradient-to-b from-white via-gray-100 to-white pointer-events-none"></div>
@@ -339,13 +350,13 @@
     });
   </script>
 
-  <script>
-  const burgerBtn = document.getElementById('burgerBtn');
-  const mobileMenu = document.getElementById('mobileMenu');
+ <script>
+const burgerBtn = document.getElementById('burgerBtn');
+const mobileMenu = document.getElementById('mobileMenu');
 
-  burgerBtn.addEventListener('click', () => {
-    mobileMenu.classList.toggle('hidden');
-  });
+burgerBtn.addEventListener('click', () => {
+  mobileMenu.classList.toggle('hidden');
+});
 </script>
 
 </body>
