--- a/projets.html
+++ b/projets.html
@@ -111,35 +111,38 @@
 <main class="flex-grow">
 
   <!-- Hero -->
-  <section id="hero" class="relative bg-white text-black h-screen flex flex-col justify-center items-center text-center p-8">
+  <section id="hero" class="relative bg-white text-black min-h-screen flex flex-col items-center text-center px-6 md:px-8 py-6
+                justify-center md:justify-center lg:justify-center">
 
   <!-- Dégradé subtil derrière le texte -->
   <div class="absolute inset-0 bg-gradient-to-b from-white via-gray-100 to-white pointer-events-none"></div>
 
-  <h1 class="text-3xl md:text-4xl font-bold mb-9" data-aos="fade-up">
+  <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold mb-9" data-aos="fade-up">
     <span class="font-helveticabold">Ici, les projets prennent la </span>
     <span class="font-danielbk">parole</span>.
   </h1>
-    <p class="text-xl md:text-1xl mb-20 leading-[1.6] md:leading-[1.6]" data-aos="fade-up" data-aos-delay="200">Identité visuelle, motion design, vidéo, branding, etc.<br>
+    <p class="text-base sm:text-lg md:text-xl mb-12 md:mb-20 leading-relaxed max-w-2xl" data-aos="fade-up" data-aos-delay="200">Identité visuelle, motion design, vidéo, branding, etc.<br>
 Découvrez une sélection de mes projets créés pour révéler des <span class="text-[#FF6D32]">identité</span> et faire émerger du <span class="text-[#FF6D32]">sens</span>.</p>
 
 
 <!-- Scroll indicator -->
-<a href="#section2"
-   class="absolute bottom-8 flex flex-col items-center text-gray-500 hover:text-[#FF6D32] transition"
-   aria-label="Scroller vers la suite">
+  <a href="#section1"
+     class="absolute bottom-4 sm:bottom-6 md:bottom-8 lg:bottom-12 flex flex-col items-center text-gray-500 hover:text-[#FF6D32] transition z-10 animate-bounce-slow"
+     aria-label="Scroller vers la suite">
 
-  <span class="text-sm mb-2 font-helvetica">Scroll</span>
+    <span class="text-xs sm:text-sm mb-1 sm:mb-2 font-helvetica tracking-wide">
+      Scroll
+    </span>
 
-  <svg xmlns="http://www.w3.org/2000/svg"
-       class="w-5 h-5"
-       fill="none"
-       viewBox="0 0 24 24"
-       stroke="currentColor"
-       stroke-width="1.5">
-    <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-  </svg>
-</a>
+    <svg xmlns="http://www.w3.org/2000/svg"
+         class="w-4 h-4 sm:w-5 sm:h-5"
+         fill="none"
+         viewBox="0 0 24 24"
+         stroke="currentColor"
+         stroke-width="1.5">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+    </svg>
+  </a>
 
   </section>
 
